--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,14 +5,6 @@
   "typescript.validate.enable": true,
   "eslint.validate": [
     "javascript",
-    "javascriptreact",
-    {
-        "language": "typescript",
-        "autoFix": true
-    },
-    {
-        "language": "typescriptreact",
-        "autoFix": true
-    }
+    "javascriptreact"
 ],
 }
